# ezgo_control

./: CMakeLists.txt  README.md  ezgo_CAN_A_definition.xlsx  ezgo_arduino.ino  package.xml
config/: E-Z-GO-RXV-ELiTE-Lithium.yaml
include/ezgo_control/: Exception.hpp  SerialPort.hpp  ezgo_vehicle.hpp
launch/: arduino_ezgo_vehicle_control.launch  ecu_ezgo_vehicle_control.launch
src/: SerialPort.cpp  arduino_control.cpp  ecu_control.cpp
src/arduino_code/: DAC8562.h  ezgo_arduino.ino
src/arduino_code/ezgo_arduino/: ezgo_arduino.ino
src/ezgo_arduino/: DAC8562.cpp  ezgo_arduino.ino
